<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_6"
    android:theme="@style/HomeTheme"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/inbox_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="FOLLOW REQUEST INBOX"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/inbox_request_list"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_below="@+id/inbox_title"
        android:layout_above ="@+id/request_handler"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:choiceMode="singleChoice"
        android:divider="@color/light_grey"
        android:dividerHeight="1sp"
        android:listSelector="@color/light_grey"
        android:padding="15dp" />

    <LinearLayout
        android:id="@+id/request_handler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">


        <Button
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="accept"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/deny_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="reject"
            android:textAllCaps="false" />

    </LinearLayout>


</RelativeLayout>